<resources>
    <string name="app_name">Tabuada</string>
    <string name="consultar_tabuada">Consultar Tabuada</string>
    <string name="first_value">Digite o valor do multiplicando:</string>
    <string name="second_value">Digite o valor do multiplicador:</string>
    <string name="result">O resultado da sua consulta é:</string>
    <string name="calcular">Calcular</string>
    <string name="limpar">Limpar</string>
    <string name="resultado">O multiplicador não pode ser 0. E o multiplicando só aceita até 10.</string>
    <string name="tutorial1">Neste projeto, o usuário deve fornecer dois valores:</string>
    <string name="tutorial2"> - O multiplicando;</string>
    <string name="tutorial3"> - O multiplicador;</string>
    <string name="tutorial4">No entanto, para o multiplicando, é permitido inserir apenas uma dezena, com valores variando de 1 a 99.</string>
    <string name="tutorial5">Quanto ao multiplicador, o valor máximo permitido é 10.</string>
    <string name="tutorial6">Ao clicar no botão "Calcular", o resultado da consulta será exibido no campo correspondente.</string>
    <string name="tutorial7">Para efetuar uma nova consulta, basta clicar no botão "Limpar".</string>
    <string name="tutor">Tutorial</string>
</resources>