<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <androidx.cardview.widget.CardView
        android:id="@+id/cv_help"
        android:layout_width="380dp"
        android:layout_height="match_parent"
        android:layout_marginTop="16dp"
        android:layout_marginBottom="16dp"
        android:layout_marginStart="16dp"
        android:layout_marginEnd="18dp"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintBottom_toBottomOf="parent"
        app:cardCornerRadius="24dp"
        app:cardBackgroundColor="@color/purple_500">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:id="@+id/cl_card_content"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <ImageView
                android:id="@+id/iv_close"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="16dp"
                android:layout_marginEnd="16dp"
                android:background="?attr/selectableItemBackgroundBorderless"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintTop_toTopOf="parent"
                app:srcCompat="@drawable/ic_close" />

            <TextView
                android:id="@+id/tv_tutorial"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/tutor"
                android:textSize="35sp"
                android:textColor="@color/white"
                android:textAlignment="center"
                android:textStyle="bold"
                app:layout_constraintTop_toBottomOf="@id/iv_close"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintEnd_toEndOf="parent"/>

            <TextView
                android:id="@+id/tv_help1"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/tutorial1"
                android:textSize="14sp"
                android:textColor="@color/white"
                android:layout_marginTop="20dp"
                android:layout_marginLeft="16dp"
                android:layout_marginRight="16dp"
                app:layout_constraintTop_toBottomOf="@id/tv_tutorial"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintEnd_toEndOf="parent"/>

            <TextView
                android:id="@+id/tv_help2"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/tutorial2"
                android:textSize="14sp"
                android:textColor="@color/white"
                android:layout_marginTop="16dp"
                android:layout_marginLeft="16dp"
                android:layout_marginRight="16dp"
                app:layout_constraintTop_toBottomOf="@id/tv_help1"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintEnd_toEndOf="parent"/>

            <TextView
                android:id="@+id/tv_help3"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/tutorial3"
                android:textSize="14sp"
                android:textColor="@color/white"
                android:layout_marginTop="16dp"
                android:layout_marginLeft="16dp"
                android:layout_marginRight="16dp"
                app:layout_constraintTop_toBottomOf="@id/tv_help2"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintEnd_toEndOf="parent"/>

            <TextView
                android:id="@+id/tv_help4"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/tutorial4"
                android:textSize="14sp"
                android:textColor="@color/white"
                android:layout_marginTop="16dp"
                android:layout_marginLeft="16dp"
                android:layout_marginRight="16dp"
                app:layout_constraintTop_toBottomOf="@id/tv_help3"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintEnd_toEndOf="parent"/>

            <TextView
                android:id="@+id/tv_help5"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/tutorial5"
                android:textSize="14sp"
                android:textColor="@color/white"
                android:layout_marginTop="16dp"
                android:layout_marginLeft="16dp"
                android:layout_marginRight="16dp"
                app:layout_constraintTop_toBottomOf="@id/tv_help4"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintEnd_toEndOf="parent"/>

            <TextView
                android:id="@+id/tv_help6"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/tutorial6"
                android:textSize="14sp"
                android:textColor="@color/white"
                android:layout_marginTop="16dp"
                android:layout_marginLeft="16dp"
                android:layout_marginRight="16dp"
                app:layout_constraintTop_toBottomOf="@id/tv_help5"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintEnd_toEndOf="parent"/>

            <TextView
                android:id="@+id/tv_help7"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/tutorial7"
                android:textSize="14sp"
                android:textColor="@color/white"
                android:layout_marginTop="16dp"
                android:layout_marginLeft="16dp"
                android:layout_marginRight="16dp"
                app:layout_constraintTop_toBottomOf="@id/tv_help6"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintEnd_toEndOf="parent"/>

        </androidx.constraintlayout.widget.ConstraintLayout>
    </androidx.cardview.widget.CardView>

</androidx.constraintlayout.widget.ConstraintLayout>