<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity">

    <!-- Botao ajuda para orientacoes de uso do app  -->
    <com.google.android.material.floatingactionbutton.FloatingActionButton
        android:id="@+id/btn_help"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:backgroundTint="@color/purple_500"
        android:layout_marginStart="15dp"
        android:layout_marginTop="13dp"
        android:drawablePadding="16dp"
        android:src="@drawable/ic_help"
        android:gravity="center_horizontal|center_vertical"
        app:tint="@android:color/white"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toStartOf="@id/tv_tabuadaTitle"
        android:onClick="openHelpActivity"/>

    <!-- Titulo do app -->
    <TextView
        android:id="@+id/tv_tabuadaTitle"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/consultar_tabuada"
        android:textSize="25sp"
        android:textStyle="bold"
        android:padding="16dp"
        android:layout_marginStart="15dp"
        android:layout_marginTop="5dp"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintStart_toEndOf="@id/btn_help"
        app:layout_constraintEnd_toStartOf="@id/btn_DarkMode"
        tools:ignore="MissingConstraints" />

    <!-- Controle Dark Mode pelo app -->
    <Switch
        android:id="@+id/btn_DarkMode"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentEnd="true"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@id/tv_tabuadaTitle"
        android:padding="16dp"
        android:layout_marginTop="10dp"
        tools:ignore="UseSwitchCompatOrMaterialXml" />

    <!-- Inserir um cardview para agrupar o multiplicando e o multiplicador -->

    <androidx.cardview.widget.CardView
        android:id="@+id/cv_tabuada"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:layout_marginStart="60dp"
        android:layout_marginEnd="60dp"
        app:cardCornerRadius="24dp"
        app:cardBackgroundColor="@color/purple_500"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/tv_tabuadaTitle">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:id="@+id/cl_card_content"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <!-- Solicita ao usuario o valor do multiplicador -->
            <TextView
                android:id="@+id/tv_firsty_entry"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/first_value"
                android:textColor="@color/white"
                android:textSize="20sp"
                android:textStyle="bold"
                android:padding="30dp"
                tools:ignore="MissingConstraints" />

            <!-- Recebe o valor do multiplicando informado pelo usuario -->
            <EditText
                android:id="@+id/et_first_entry"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:inputType="number"
                android:maxLength="2"
                android:hint="00"
                android:textColorHint="@color/white"
                android:textSize="18sp"
                android:textColor="@color/white"
                android:padding="16dp"
                android:layout_marginEnd="50dp"
                android:layout_marginBottom="25dp"
                app:layout_constraintTop_toTopOf="parent"
                app:layout_constraintStart_toEndOf="@id/tv_firsty_entry"
                app:layout_constraintBottom_toTopOf="@id/et_second_entry"
                app:layout_constraintEnd_toEndOf="parent"/>

            <!-- Solicita ao usuario o valor do multiplicador -->
            <TextView
                android:id="@+id/tv_second_entry"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/second_value"
                android:textColor="@color/white"
                android:textSize="20sp"
                android:textStyle="bold"
                android:padding="30dp"
                app:layout_constraintTop_toBottomOf="@id/tv_firsty_entry"
                tools:ignore="MissingConstraints" />

            <!-- Recebe o valor do multiplicador informado pelo usuario -->
            <EditText
                android:id="@+id/et_second_entry"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:inputType="number"
                android:maxLength="2"
                android:hint="00"
                android:textColorHint="@color/white"
                android:textColor="@color/white"
                android:textSize="18sp"
                android:padding="16dp"
                android:layout_marginEnd="50dp"
                android:layout_marginTop="10dp"
                app:layout_constraintTop_toBottomOf="@id/et_first_entry"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintStart_toEndOf="@id/tv_second_entry"
                app:layout_constraintEnd_toEndOf="parent"/>

        </androidx.constraintlayout.widget.ConstraintLayout>
    </androidx.cardview.widget.CardView>

    <!-- Botao calcular consulta -->
    <Button
        android:id="@+id/btn_calc"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/calcular"
        android:textSize="30sp"
        android:textColor="@color/white"
        android:layout_marginTop="25dp"
        app:layout_constraintTop_toBottomOf="@id/cv_tabuada"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toStartOf="@id/btn_clean"/>

    <!-- Botao limpar consulta -->
    <Button
        android:id="@+id/btn_clean"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="25dp"
        android:text="@string/limpar"
        android:textSize="30sp"
        android:textColor="@color/white"
        app:layout_goneMarginTop="50dp"
        app:layout_constraintTop_toBottomOf="@id/cv_tabuada"
        app:layout_constraintStart_toEndOf="@id/btn_calc"
        app:layout_constraintEnd_toEndOf="parent"/>

    <!-- Informa ao usuario a resposta-->
    <TextView
        android:id="@+id/tv_result"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/result"
        android:textAlignment="center"
        android:textSize="20sp"
        android:textStyle="bold"
        android:padding="10dp"
        android:layout_marginTop="1dp"
        app:layout_constraintTop_toBottomOf="@id/btn_calc"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"/>

    <!-- Apresenta o resultado da consulta  -->
    <TextView
        android:id="@+id/tv_result_value"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:padding="20dp"
        android:hint="Resultado"
        android:textColorHint="@color/white"
        android:textColor="@color/white"
        android:textSize="30sp"
        android:textAlignment="center"
        android:background="@color/purple_500"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@id/tv_result"
        app:layout_constraintBottom_toBottomOf="parent"/>

</androidx.constraintlayout.widget.ConstraintLayout>